# nxvm

./: .gitignore  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.ac  makefile  stat.asm
bochx/: LICENSE  README  bochsapi.cc  bochsapi.h  makefile  nxvmapi.c
bochx/bochs-2.6/: bochs.h  config.cc  config.h
bochx/bochs-2.6/cpu/: cpu.cc  data_xfer16.cc  init.cc  paging.cc
bochx/bochs-2.6/vs2008/: bochs.vcproj  cpu.vcproj
doc/: astyle.txt
doc/_save/: mm.cmd
doc/_save/i386_ref/: vcpuins.c
doc/_todo/: vbios.c
doc/code/debug/: vm8086_trace.txt
doc/code/research/: dev_all_lifegame_display_test.c  dev_linux_curses_key_test.c  dev_linux_pthread_test.c  dev_linux_termios_key_test.c  (+2 more)
doc/design_cn/: roadmap.txt
doc/design_en/: discussion_with_mike_20130813.docx  introduction.doc  proposal.doc  slides.ppt
doc/help/: astyle.txt
doc/tool/: automake.txt
nkvdm/: AUTHORS  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
nkvdm/doc/: msdos.txt  roadmap.txt
nkvdm/doc/deprecated/: msdos.c
nkvdm/src/: dasm16s.c  dasm16s.h  exec.c  exec.h  main.c  msdos.c  msdos.h
src/: 8086ins.txt  8086ins_2.txt  a.out  a.txt  console.c  console.h  cpp.cmd  dasm.c  debug.c  debug.h  dosint.c  dosint.h  fcntline.cmd  global.h  list.txt  machine.c  machine.h  main.c  makefile  makefile.new  mm.cmd  pack.cmd  reset.com  stop.com  test.com  todo.c  todo.txt  utils.c  utils.h
src/_doc/: intro_nxvm.doc  intro_nxvm.ppt  proposal.docx  虚拟机设计方法和代码导读.docx
src/_make/: mm.cmd
src/_ref/: linux_getch.c  nekoconsolepaint.win32.c
src/_test/: dev_win32_console_display_print_pixels.c  int_conflicts.txt  linux_curses_key_test.c  linux_pthread_test.c  test.img.rar  win32_console_key_test.c
src/_todo/: vkbc.h
src/asm86/: asm86.c  asm86.h
src/console/: asm86.c  asm86.h  console.c  console.h  debug.c  debug.h  global.h
src/device/: device.c  device.h  vbios.c  vbios.h  vcmos.c  vcmos.h  vcpu.c  vcpu.h  vcpuapi.cc  vcpuins.c  vcpuins.h  vcpuins_i8086.c  vdebug.c  vdebug.h  vdma.c  vdma.h  vfdc.c  vfdc.h  vfdd.c  vfdd.h  vglobal.h  vhdc.c  vhdc.h  vhdd.c  vhdd.h  vkbc.c  vkbc.h  vmachine.c  vmachine.h  vpic.c  vpic.h  vpit.c  vpit.h  vport.c  vport.h  vram.c  vram.h  vvadp.c  vvadp.h
src/nvm/: coption.h  vbios.c  vbios.h  vcpu.c  vcpu.h  vcpuins.c  vcpuins.h  vdisplay.c  vdisplay.h  vglobal.h  vmachine.c  vmachine.h  vmemory.c  vmemory.h
src/platform/: platform.c  platform.h
src/system/: vapi.c  vapi.h  vlog.c  vlog.h  w32adisp.c  w32adisp.h  w32akeyb.c  w32akeyb.h  win32app.c  win32app.h
src/vmachine/: coption.h  qdbios.c  qdbios.h  qdcga.c  qdcga.h  qdfdd.c  qdfdd.h  qdkeyb.c  qdkeyb.h  qdrtc.c  qdrtc.h  qdvga.c  qdvga.h  stdint.h  stdint_vc6.h  vapi.c  vapi.h  vbios.c  vcmos.c  vcmos.h  vcpu.c  vcpu.h  vcpuapi.c  vcpuapi.cc  vcpuapi.h  vcpuins-i8086.c  vcpuins.c  vcpuins.h  vcpuins_i8086.c  vcpuins_new.c  vdma.c  vdma.h  vdmac.c  vdmac.h  vfdc.c  vfdc.h  vfdd.c  vfdd.h  vglobal.h  vhdd.c  (+19 more)
src/xasm32/: aasm32.c  aasm32.h  dasm32.c  dasm32.h
(+199 files in other folders)
